# bcbc

./: Cargo.toml  casting.rs  leb128.rs  leb128_num_traits.rs  lib.rs  reader.rs  tests.rs  text_writer.rs  ty.rs  type_id.rs  writer.rs
bcbc/: casting.rs  lib.rs  reader.rs  tests.rs  writer.rs
bcs-parser/: example.bcs
byte-storage/: bytestr.rs
